--- a/3-column-preview-card-component-main/index.html
+++ b/3-column-preview-card-component-main/index.html
@@ -14,7 +14,7 @@
   
   <div class="column-preview grid">
     <div class="card sedan">
-      <img src="images/icon-sedans.svg" class="icon">
+      <img src="images/icon-sedans.svg" alt="sedans icon img" class="icon">
       <h1 class="title">Sedans</h1>
       <p class="description">
         Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
@@ -23,7 +23,7 @@
       <a href="" class="button">Learn More</a>
     </div>
     <div class="card suvs">
-      <img src="images/icon-suvs.svg" class="icon">
+      <img src="images/icon-suvs.svg" alt="suv icon img" class="icon">
       <h1 class="title">SUVs</h1>
       <p class="description">
         Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
@@ -32,7 +32,7 @@
       <a href="" class="button">Learn More</a>
     </div>
     <div class="card luxury">
-      <img src="images/icon-luxury.svg" class="icon">
+      <img src="images/icon-luxury.svg" alt="luxury icon img" class="icon">
       <h1 class="title">Luxury</h1>
       <p class="description">
         Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
